fix copy confirmation on smaller screen

--- a/css/forums/forums.css
+++ b/css/forums/forums.css
@@ -1,19 +1,33 @@
 .confirmation {
   z-index: 2147483647;
   display: none;
-  top: -60px;
   position: relative;
   background: var(--default-panel-gradient);
-  border: 1px solid;
-  border-color: var(--default-panel-divider-outer-side-color);
+  border: 1px solid var(--default-panel-divider-outer-side-color);
   padding: 5px;
   border-radius: 5px;
   width: 46px;
+  bottom: 26px;
   left: 50%;
   transform: translateX(-50%);
+  /*Prevent selecting text*/
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
 }
 
+.confirmation.copied {
+  display: block;
+  pointer-events: none;
+}
+
+/*
 .confirmation.copied:after {
+  z-index: 2147483647;
   content:'';
   position: absolute;
   top: 100%;
@@ -25,10 +39,8 @@
   border-left: solid 5px transparent;
   border-right: solid 5px transparent;
 }
+*/
 
-.confirmation.copied {
-  display: block;
-}
 .confirmation.copied, .confirmation.copied:after {
 -webkit-animation: fadeinout 2s; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadeinout 2s; /* Firefox < 16 */
